# eb-event-logger

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
src/: ed_newtype.rs  main.rs
tools/: entrypoint.sh
